objects/Exception__c.object
<CustomObject>
    <description>Details regarding exceptions that relate to custom integrations to Salesforce.</description>
    <fields>
        <fullName>AL_Sales_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the document is a Sales Tax Document for Alabama (an acceptable replacement for a resale cert).</description>
        <label>AL Sales Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <description>The Batch Id generated when the Title was scanned. Combination of the user id in the Titles CRON, the scanner Id, current date, and current time</description>
        <label>Batch Id</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Issues__c</fullName>
        <description>A selection of issues that would impede compliance. User should select as many as apply to the document.</description>
        <label>Compliance Issues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Signature</fullName>
                </value>
                <value>
                    <fullName>Incorrect State</fullName>
                </value>
                <value>
                    <fullName>Document illegible</fullName>
                </value>
                <value>
                    <fullName>Incorrect document</fullName>
                </value>
                <value>
                    <fullName>Did not specify reason for exemption on MTC</fullName>
                </value>
                <value>
                    <fullName>State doesn&apos;t allow MTC for resale purpose</fullName>
                </value>
                <value>
                    <fullName>Resale not specified</fullName>
                </value>
                <value>
                    <fullName>Resale box not checked</fullName>
                </value>
                <value>
                    <fullName>Document expired</fullName>
                </value>
                <value>
                    <fullName>Missing Resale/Tax ID #</fullName>
                </value>
                <value>
                    <fullName>ACV Listed As Seller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a document is compliant or not.</description>
        <label>Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <description>Date the document was signed by the state. Also the date that the Expiration Date is calculated from if no explicit expiration date is listed on the document.</description>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <description>The ACV Id of the dealership the document is associated with.</description>
        <label>Dealer ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Created_By_Id__c</fullName>
        <label>Document Created By Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Notes__c</fullName>
        <description>Field for any notes about the document.</description>
        <label>Document Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_State_Dealer_Entered__c</fullName>
        <description>The state the document was issued by as entered by the dealer.</description>
        <label>Document State Dealer Entered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbreviations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_State_ML__c</fullName>
        <description>The state the document was issued by as entered by ML.</description>
        <label>Document State ML</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbreviations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_State__c</fullName>
        <description>The state the document was issued by.</description>
        <label>Document State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbreviations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>Subject of the Email that was going to be sent to the ops inbox</description>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceptions_Found__c</fullName>
        <description>List of exceptions found for specific case</description>
        <label>Exceptions Found</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Dealer_Entered__c</fullName>
        <description>The date the document is set to expire as entered by the dealer.</description>
        <inlineHelpText>You must enter an expiration date. If no expiration date is listed, it is this far out: AL = 1yr, AZ = 4yrs, MI = 4yrs, ME = 3yrs, LA = 3yrs, NE = 3yrs, WA = 4yrs, FL = 1yr. Ex: Document state = AZ; signature date = 2/28/19; expiration date = 2/28/23.</inlineHelpText>
        <label>Expiration Date Dealer Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_ML__c</fullName>
        <description>The date the document is set to expire as entered by ML.</description>
        <inlineHelpText>You must enter an expiration date. If no expiration date is listed, it is this far out: AL = 1yr, AZ = 4yrs, MI = 4yrs, ME = 3yrs, LA = 3yrs, NE = 3yrs, WA = 4yrs, FL = 1yr. Ex: Document state = AZ; signature date = 2/28/19; expiration date = 2/28/23.</inlineHelpText>
        <label>Expiration Date ML</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>The date the document is set to expire.</description>
        <inlineHelpText>You must enter an expiration date. If no expiration date is listed, it is this far out: AL = 1yr, AZ = 4yrs, MI = 4yrs, ME = 3yrs, LA = 3yrs, NE = 3yrs, WA = 4yrs, FL = 1yr. Ex: Document state = AZ; signature date = 2/28/19; expiration date = 2/28/23.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if an account has been given an extension for a document that expired during quarantine in a state where the DMV has closed.</description>
        <label>Extension Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IST_Account_Manager_Email__c</fullName>
        <description>Field containing the IST rep&apos;s email for the related account.</description>
        <label>IST Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Images_Location__c</fullName>
        <description>S3 Bucket Folder location for JPEG images</description>
        <label>Images Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Name__c</fullName>
        <label>Insurance Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Coverage_Amount__c</fullName>
        <label>Inventory Coverage Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>License_Number_Dealer_Entered__c</fullName>
        <description>The license number of the document as entered by the dealer.</description>
        <label>License Number Dealer Entered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>License_Number_ML__c</fullName>
        <description>The license number of the document as entered by ML.</description>
        <label>License Number ML</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <description>The license number of the document.</description>
        <label>License Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MTC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the document entered is an MTC document instead of a resale document.</description>
        <inlineHelpText>Mark this box as checked/true, if dealer has supplied an MTC instead of a state-specific resale doc. You should still indicate which state the MTC is being submitted for in the Document State field.</inlineHelpText>
        <label>MTC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Validation_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If false, code will auto-convert Exception record to a Dealer Doc record.</description>
        <label>Manual Validation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates that a document does not expire.</description>
        <inlineHelpText>If a resale certificate does not have an expiration date (all states except AZ, MI, NE, WA and FL), you must check this box.</inlineHelpText>
        <label>No Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outbound_Batch_Id__c</fullName>
        <description>Batch Id referenced when scanning a title through the ML Automation for outbound. Combination of the user id in the Titles CRON, the scanner Id, current date, and current time</description>
        <label>Outbound Batch Id</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Resale_Number__c</fullName>
        <description>The resale or permit number of the document.</description>
        <label>Permit/Resale Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <description>Field containing the primary contact&apos;s email for the related account.</description>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Related_Account_Name__c</fullName>
        <description>Holds the name of the related account for use by the business document confirmation emails.</description>
        <label>Related Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Auction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auction that the image relates to</description>
        <label>Related Auction</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case that this Exception relates to</description>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reply_To_Email__c</fullName>
        <formula>IF(RecordType.Name = &quot;Certificate of Insurance&quot;, &quot;acvadvance@acvauctions.com&quot;, &quot;acvinfo@acvauctions.com&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply To Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Decision__c</fullName>
        <description>The outcome of the document review, selected after the review process is complete. This field will trigger different emails depending on the selection.</description>
        <label>Review Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current and Compliant Document</fullName>
                </value>
                <value>
                    <fullName>Historical Document</fullName>
                </value>
                <value>
                    <fullName>Invalid Document</fullName>
                </value>
                <value>
                    <fullName>Poor Document Quality</fullName>
                </value>
                <value>
                    <fullName>Duplicate Document</fullName>
                </value>
                <value>
                    <fullName>Auto-Converted</fullName>
                </value>
                <value>
                    <fullName>Incomplete/Adjustment Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <description>The status of reviewing the document.</description>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Requires IST</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Processed by IST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scanner_Model_Name__c</fullName>
        <description>Model Name of Scanner used</description>
        <label>Scanner Model Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Exception</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Email__c</fullName>
        <description>Field containing the TM&apos;s email for the related account.</description>
        <label>TM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Title_Scanned_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that scanned the title</description>
        <label>Title Scanned By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title_State__c</fullName>
        <description>Populated by call to TitlesReceived REST API. The ML api is used to discern the State of the Title.</description>
        <inlineHelpText>Populated by call to TitlesReceived REST API. The ML api is used to discern the State of the Title.</inlineHelpText>
        <label>Title State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>ACV_Capital_Certificate_of_Insurance</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Dealer_ID__c</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>Inventory_Coverage_Amount__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Review_Decision__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Compliant__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.Certificate_of_Insurance</value>
        </filters>
        <filters>
            <field>Insurance_Company_Name__c</field>
            <operation>notContain</operation>
            <value>not acv cap</value>
        </filters>
        <label>ACV Capital - Certificate of Insurance</label>
    </listViews>
    <listViews>
        <fullName>All_Dealer_Doc_Exceptions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Review_Decision__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Dealer_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>12/1/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.Dealer_License,Exception__c.Resale_Certificate</value>
        </filters>
        <label>All Dealer Doc Exceptions</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All22</fullName>
        <columns>NAME</columns>
        <columns>Email_Subject__c</columns>
        <columns>Related_Auction__c</columns>
        <columns>Related_Case__c</columns>
        <columns>Scanner_Model_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Title_Scanned_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Exceptions_Found__c</columns>
        <columns>Batch_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.ML_Titles</value>
        </filters>
        <filters>
            <field>Title_Scanned_By__c</field>
            <operation>notContain</operation>
            <value>lewis</value>
        </filters>
        <label>Outbound ML</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All6</fullName>
        <columns>NAME</columns>
        <columns>Email_Subject__c</columns>
        <columns>Related_Auction__c</columns>
        <columns>Related_Case__c</columns>
        <columns>Scanner_Model_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Title_Scanned_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Exceptions_Found__c</columns>
        <columns>Batch_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.ML_Titles,Exception__c.Titles</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Closed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/28/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>Title_Scanned_By__c</field>
            <operation>contains</operation>
            <value>alyssa</value>
        </filters>
        <label>Exceptions Filter</label>
    </listViews>
    <listViews>
        <fullName>Dealer_Doc_Exceptions_for_IST_Review</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Review_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Dealer_ID__c</columns>
        <columns>Related_Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Ready for Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.Dealer_License</value>
        </filters>
        <label>Dealer Doc Exceptions for IST Review</label>
    </listViews>
    <listViews>
        <fullName>Dealer_Doc_Exceptions_for_Review</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Dealer_ID__c</columns>
        <columns>Related_Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.Dealer_License,Exception__c.Resale_Certificate</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Dealer Doc Exceptions for Review</label>
    </listViews>
    <listViews>
        <fullName>ML_Exceptions</fullName>
        <columns>NAME</columns>
        <columns>Email_Subject__c</columns>
        <columns>Related_Auction__c</columns>
        <columns>Related_Case__c</columns>
        <columns>Status__c</columns>
        <columns>Title_Scanned_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Batch_Id__c</columns>
        <columns>Scanner_Model_Name__c</columns>
        <columns>Exceptions_Found__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.ML_Titles</value>
        </filters>
        <label>ML Exceptions</label>
    </listViews>
    <listViews>
        <fullName>ML_Exceptions_not_closed</fullName>
        <columns>NAME</columns>
        <columns>Email_Subject__c</columns>
        <columns>Related_Auction__c</columns>
        <columns>Related_Case__c</columns>
        <columns>Scanner_Model_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Title_Scanned_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Exceptions_Found__c</columns>
        <columns>Batch_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.ML_Titles</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Closed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>Related_Case__c</field>
            <operation>notContain</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Title_Scanned_By__c</field>
            <operation>contains</operation>
            <value>paige</value>
        </filters>
        <label>ML Exceptions not closed</label>
    </listViews>
    <listViews>
        <fullName>My_Exceptions</fullName>
        <columns>NAME</columns>
        <columns>Email_Subject__c</columns>
        <columns>Related_Auction__c</columns>
        <columns>Related_Case__c</columns>
        <columns>Exceptions_Found__c</columns>
        <columns>Status__c</columns>
        <columns>Title_Scanned_By__c</columns>
        <columns>Batch_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Exceptions</label>
    </listViews>
    <listViews>
        <fullName>Tara_s_Exception_Copy</fullName>
        <columns>NAME</columns>
        <columns>Related_Case__c</columns>
        <columns>Related_Auction__c</columns>
        <columns>Exceptions_Found__c</columns>
        <columns>Status__c</columns>
        <columns>Batch_Id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Title_Scanned_By__c</field>
            <operation>contains</operation>
            <value>aliyah</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.ML_Titles</value>
        </filters>
        <label>Tara&apos;s Exception Copy</label>
        <sharedTo>
            <role>Titles_Manager</role>
            <role>Titles_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Title_Exceptions</fullName>
        <columns>NAME</columns>
        <columns>Exceptions_Found__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Review_Decision__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Dealer_ID__c</columns>
        <columns>Batch_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.ML_Titles,Exception__c.Titles</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Exceptions_Found__c</field>
            <operation>contains</operation>
            <value>unwind</value>
        </filters>
        <label>Priorirty Title Exceptions</label>
    </listViews>
    <listViews>
        <fullName>Titles_Exceptions_Outbound</fullName>
        <columns>NAME</columns>
        <columns>Email_Subject__c</columns>
        <columns>Related_Auction__c</columns>
        <columns>Related_Case__c</columns>
        <columns>Scanner_Model_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Title_Scanned_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Exceptions_Found__c</columns>
        <columns>Batch_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.ML_Titles,Exception__c.Titles</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>unwind</value>
        </filters>
        <label>Unpaid Exceptions</label>
    </listViews>
    <listViews>
        <fullName>Unwind_Title_Exceptions</fullName>
        <columns>Related_Auction__c</columns>
        <columns>Related_Case__c</columns>
        <columns>Batch_Id__c</columns>
        <columns>NAME</columns>
        <columns>Exceptions_Found__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.ML_Titles,Exception__c.Titles</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Exceptions_Found__c</field>
            <operation>contains</operation>
            <value>unwind</value>
        </filters>
        <label>Unwind Title Exceptions - Today</label>
    </listViews>
    <listViews>
        <fullName>priority</fullName>
        <columns>NAME</columns>
        <columns>Email_Subject__c</columns>
        <columns>Related_Auction__c</columns>
        <columns>Related_Case__c</columns>
        <columns>Scanner_Model_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Title_Scanned_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Exceptions_Found__c</columns>
        <columns>Batch_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.ML_Titles,Exception__c.Titles</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Exceptions_Found__c</field>
            <operation>contains</operation>
            <value>auction number</value>
        </filters>
        <filters>
            <field>Title_Scanned_By__c</field>
            <operation>notContain</operation>
            <value>Tara</value>
        </filters>
        <filters>
            <field>Exceptions_Found__c</field>
            <operation>notContain</operation>
            <value>case status</value>
        </filters>
        <filters>
            <field>Title_Scanned_By__c</field>
            <operation>contains</operation>
            <value>james d</value>
        </filters>
        <label>Exceptions not linked</label>
    </listViews>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <recordTypes>
        <fullName>Certificate_of_Insurance</fullName>
        <active>true</active>
        <description>Used by ACV Capital to capture information around the Dealer&apos;s Insurance Documents</description>
        <label>Certificate of Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer_License</fullName>
        <active>true</active>
        <description>Record type for Dealer Licenses passed in from ML</description>
        <label>Dealer License</label>
    </recordTypes>
    <recordTypes>
        <fullName>ML_Titles</fullName>
        <active>true</active>
        <label>ML Titles</label>
    </recordTypes>
</CustomObject>